parser.out
Grammar:

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statements statement
Rule 3     statement -> command NEWLINE
Rule 4     empty -> <empty>
Rule 5     command -> somecrement
Rule 6     command -> assign
Rule 7     command -> forever_block
Rule 8     command -> while_block
Rule 9     command -> for_block
Rule 10    command -> if_block
Rule 11    command -> expr
Rule 12    command -> empty
Rule 13    args -> expr
Rule 14    args -> args expr
Rule 15    if_block -> IF error THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
Rule 16    if_block -> IF error THEN NEWLINE statements elifs DONE
Rule 17    if_block -> IF error THEN NEWLINE statements ELSE NEWLINE statements DONE
Rule 18    if_block -> IF error THEN NEWLINE statements DONE
Rule 19    if_block -> IF expr THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
Rule 20    if_block -> IF expr THEN NEWLINE statements elifs DONE
Rule 21    if_block -> IF expr THEN NEWLINE statements ELSE NEWLINE statements DONE
Rule 22    if_block -> IF expr THEN NEWLINE statements DONE
Rule 23    elifs -> elif_block
Rule 24    elifs -> elifs elif_block
Rule 25    elif_block -> ELSE IF command THEN statements
Rule 26    while_block -> WHILE command DO statements DONE
Rule 27    for_block -> FOR ID IN command DO statements DONE
Rule 28    forever_block -> DO statements FOREVER
Rule 29    expr -> STRING
Rule 30    expr -> FLOAT
Rule 31    expr -> INTEGER
Rule 32    expr -> empty COLON ID args SEMICOLON
Rule 33    expr -> ID COLON ID args SEMICOLON
Rule 34    expr -> ID
Rule 35    expr -> NOT expr
Rule 36    expr -> SUB expr  [precedence=right, level=4]
Rule 37    expr -> expr MOD expr  [precedence=left, level=3]
Rule 38    expr -> expr FLOORDIV expr  [precedence=left, level=3]
Rule 39    expr -> expr TRUEDIV expr  [precedence=left, level=3]
Rule 40    expr -> expr MUL expr  [precedence=left, level=3]
Rule 41    expr -> expr SUB expr  [precedence=left, level=2]
Rule 42    expr -> expr ADD expr  [precedence=left, level=2]
Rule 43    somecrement -> ID DECREMENT
Rule 44    somecrement -> ID INCREMENT
Rule 45    assign -> ID ASSIGN expr

Unused terminals:

    RETURN
    CLASS
    FROM
    AS
    GT
    EXP
    BUILDER
    EQ
    OPEN
    GE
    AND
    IS
    LE
    USING
    OR
    NE
    DEFINE
    LT

Terminals, with rules where they appear:

ADD                  : 42
AND                  : 
AS                   : 
ASSIGN               : 45
BUILDER              : 
CLASS                : 
COLON                : 32 33
DECREMENT            : 43
DEFINE               : 
DO                   : 26 27 28
DONE                 : 15 16 17 18 19 20 21 22 26 27
ELSE                 : 15 17 19 21 25
EQ                   : 
EXP                  : 
FLOAT                : 30
FLOORDIV             : 38
FOR                  : 27
FOREVER              : 28
FROM                 : 
GE                   : 
GT                   : 
ID                   : 27 32 33 33 34 43 44 45
IF                   : 15 16 17 18 19 20 21 22 25
IN                   : 27
INCREMENT            : 44
INTEGER              : 31
IS                   : 
LE                   : 
LT                   : 
MOD                  : 37
MUL                  : 40
NE                   : 
NEWLINE              : 3 15 15 16 17 17 18 19 19 20 21 21 22
NOT                  : 35
OPEN                 : 
OR                   : 
RETURN               : 
SEMICOLON            : 32 33
STRING               : 29
SUB                  : 36 41
THEN                 : 15 16 17 18 19 20 21 22 25
TRUEDIV              : 39
USING                : 
WHILE                : 26
error                : 15 16 17 18

Nonterminals, with rules where they appear:

args                 : 14 32 33
assign               : 6
command              : 3 25 26 27
elif_block           : 23 24
elifs                : 15 16 19 20 24
empty                : 12 32
expr                 : 11 13 14 19 20 21 22 35 36 37 37 38 38 39 39 40 40 41 41 42 42 45
for_block            : 9
forever_block        : 7
if_block             : 10
somecrement          : 5
statement            : 1 2
statements           : 2 15 15 16 17 17 18 19 19 20 21 21 22 25 26 27 28 0
while_block          : 8


state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statements statement
    (3) statement -> . command NEWLINE
    (5) command -> . somecrement
    (6) command -> . assign
    (7) command -> . forever_block
    (8) command -> . while_block
    (9) command -> . for_block
    (10) command -> . if_block
    (11) command -> . expr
    (12) command -> . empty
    (43) somecrement -> . ID DECREMENT
    (44) somecrement -> . ID INCREMENT
    (45) assign -> . ID ASSIGN expr
    (28) forever_block -> . DO statements FOREVER
    (26) while_block -> . WHILE command DO statements DONE
    (27) for_block -> . FOR ID IN command DO statements DONE
    (15) if_block -> . IF error THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
    (16) if_block -> . IF error THEN NEWLINE statements elifs DONE
    (17) if_block -> . IF error THEN NEWLINE statements ELSE NEWLINE statements DONE
    (18) if_block -> . IF error THEN NEWLINE statements DONE
    (19) if_block -> . IF expr THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
    (20) if_block -> . IF expr THEN NEWLINE statements elifs DONE
    (21) if_block -> . IF expr THEN NEWLINE statements ELSE NEWLINE statements DONE
    (22) if_block -> . IF expr THEN NEWLINE statements DONE
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
    ID              shift and go to state 12
    DO              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    IF              shift and go to state 16
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)
    NEWLINE         reduce using rule 4 (empty -> .)

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    command                        shift and go to state 3
    somecrement                    shift and go to state 4
    assign                         shift and go to state 5
    forever_block                  shift and go to state 6
    while_block                    shift and go to state 7
    for_block                      shift and go to state 8
    if_block                       shift and go to state 9
    expr                           shift and go to state 10
    empty                          shift and go to state 11

state 1

    (0) S' -> statements .
    (2) statements -> statements . statement
    (3) statement -> . command NEWLINE
    (5) command -> . somecrement
    (6) command -> . assign
    (7) command -> . forever_block
    (8) command -> . while_block
    (9) command -> . for_block
    (10) command -> . if_block
    (11) command -> . expr
    (12) command -> . empty
    (43) somecrement -> . ID DECREMENT
    (44) somecrement -> . ID INCREMENT
    (45) assign -> . ID ASSIGN expr
    (28) forever_block -> . DO statements FOREVER
    (26) while_block -> . WHILE command DO statements DONE
    (27) for_block -> . FOR ID IN command DO statements DONE
    (15) if_block -> . IF error THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
    (16) if_block -> . IF error THEN NEWLINE statements elifs DONE
    (17) if_block -> . IF error THEN NEWLINE statements ELSE NEWLINE statements DONE
    (18) if_block -> . IF error THEN NEWLINE statements DONE
    (19) if_block -> . IF expr THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
    (20) if_block -> . IF expr THEN NEWLINE statements elifs DONE
    (21) if_block -> . IF expr THEN NEWLINE statements ELSE NEWLINE statements DONE
    (22) if_block -> . IF expr THEN NEWLINE statements DONE
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
    ID              shift and go to state 12
    DO              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    IF              shift and go to state 16
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)
    NEWLINE         reduce using rule 4 (empty -> .)

    statement                      shift and go to state 22
    command                        shift and go to state 3
    somecrement                    shift and go to state 4
    assign                         shift and go to state 5
    forever_block                  shift and go to state 6
    while_block                    shift and go to state 7
    for_block                      shift and go to state 8
    if_block                       shift and go to state 9
    expr                           shift and go to state 10
    empty                          shift and go to state 11

state 2

    (1) statements -> statement .
    ID              reduce using rule 1 (statements -> statement .)
    DO              reduce using rule 1 (statements -> statement .)
    WHILE           reduce using rule 1 (statements -> statement .)
    FOR             reduce using rule 1 (statements -> statement .)
    IF              reduce using rule 1 (statements -> statement .)
    STRING          reduce using rule 1 (statements -> statement .)
    FLOAT           reduce using rule 1 (statements -> statement .)
    INTEGER         reduce using rule 1 (statements -> statement .)
    NOT             reduce using rule 1 (statements -> statement .)
    SUB             reduce using rule 1 (statements -> statement .)
    $end            reduce using rule 1 (statements -> statement .)
    NEWLINE         reduce using rule 1 (statements -> statement .)
    COLON           reduce using rule 1 (statements -> statement .)
    FOREVER         reduce using rule 1 (statements -> statement .)
    DONE            reduce using rule 1 (statements -> statement .)
    ELSE            reduce using rule 1 (statements -> statement .)


state 3

    (3) statement -> command . NEWLINE
    NEWLINE         shift and go to state 23


state 4

    (5) command -> somecrement .
    NEWLINE         reduce using rule 5 (command -> somecrement .)
    DO              reduce using rule 5 (command -> somecrement .)
    THEN            reduce using rule 5 (command -> somecrement .)


state 5

    (6) command -> assign .
    NEWLINE         reduce using rule 6 (command -> assign .)
    DO              reduce using rule 6 (command -> assign .)
    THEN            reduce using rule 6 (command -> assign .)


state 6

    (7) command -> forever_block .
    NEWLINE         reduce using rule 7 (command -> forever_block .)
    DO              reduce using rule 7 (command -> forever_block .)
    THEN            reduce using rule 7 (command -> forever_block .)


state 7

    (8) command -> while_block .
    NEWLINE         reduce using rule 8 (command -> while_block .)
    DO              reduce using rule 8 (command -> while_block .)
    THEN            reduce using rule 8 (command -> while_block .)


state 8

    (9) command -> for_block .
    NEWLINE         reduce using rule 9 (command -> for_block .)
    DO              reduce using rule 9 (command -> for_block .)
    THEN            reduce using rule 9 (command -> for_block .)


state 9

    (10) command -> if_block .
    NEWLINE         reduce using rule 10 (command -> if_block .)
    DO              reduce using rule 10 (command -> if_block .)
    THEN            reduce using rule 10 (command -> if_block .)


state 10

    (11) command -> expr .
    (37) expr -> expr . MOD expr
    (38) expr -> expr . FLOORDIV expr
    (39) expr -> expr . TRUEDIV expr
    (40) expr -> expr . MUL expr
    (41) expr -> expr . SUB expr
    (42) expr -> expr . ADD expr
    NEWLINE         reduce using rule 11 (command -> expr .)
    DO              reduce using rule 11 (command -> expr .)
    THEN            reduce using rule 11 (command -> expr .)
    MOD             shift and go to state 24
    FLOORDIV        shift and go to state 25
    TRUEDIV         shift and go to state 26
    MUL             shift and go to state 27
    SUB             shift and go to state 28
    ADD             shift and go to state 29


state 11

    (12) command -> empty .
    (32) expr -> empty . COLON ID args SEMICOLON
    NEWLINE         reduce using rule 12 (command -> empty .)
    DO              reduce using rule 12 (command -> empty .)
    THEN            reduce using rule 12 (command -> empty .)
    COLON           shift and go to state 30


state 12

    (43) somecrement -> ID . DECREMENT
    (44) somecrement -> ID . INCREMENT
    (45) assign -> ID . ASSIGN expr
    (33) expr -> ID . COLON ID args SEMICOLON
    (34) expr -> ID .
    DECREMENT       shift and go to state 31
    INCREMENT       shift and go to state 32
    ASSIGN          shift and go to state 33
    COLON           shift and go to state 34
    MOD             reduce using rule 34 (expr -> ID .)
    FLOORDIV        reduce using rule 34 (expr -> ID .)
    TRUEDIV         reduce using rule 34 (expr -> ID .)
    MUL             reduce using rule 34 (expr -> ID .)
    SUB             reduce using rule 34 (expr -> ID .)
    ADD             reduce using rule 34 (expr -> ID .)
    NEWLINE         reduce using rule 34 (expr -> ID .)
    DO              reduce using rule 34 (expr -> ID .)
    THEN            reduce using rule 34 (expr -> ID .)


state 13

    (28) forever_block -> DO . statements FOREVER
    (1) statements -> . statement
    (2) statements -> . statements statement
    (3) statement -> . command NEWLINE
    (5) command -> . somecrement
    (6) command -> . assign
    (7) command -> . forever_block
    (8) command -> . while_block
    (9) command -> . for_block
    (10) command -> . if_block
    (11) command -> . expr
    (12) command -> . empty
    (43) somecrement -> . ID DECREMENT
    (44) somecrement -> . ID INCREMENT
    (45) assign -> . ID ASSIGN expr
    (28) forever_block -> . DO statements FOREVER
    (26) while_block -> . WHILE command DO statements DONE
    (27) for_block -> . FOR ID IN command DO statements DONE
    (15) if_block -> . IF error THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
    (16) if_block -> . IF error THEN NEWLINE statements elifs DONE
    (17) if_block -> . IF error THEN NEWLINE statements ELSE NEWLINE statements DONE
    (18) if_block -> . IF error THEN NEWLINE statements DONE
    (19) if_block -> . IF expr THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
    (20) if_block -> . IF expr THEN NEWLINE statements elifs DONE
    (21) if_block -> . IF expr THEN NEWLINE statements ELSE NEWLINE statements DONE
    (22) if_block -> . IF expr THEN NEWLINE statements DONE
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
    ID              shift and go to state 12
    DO              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    IF              shift and go to state 16
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)
    NEWLINE         reduce using rule 4 (empty -> .)

    statements                     shift and go to state 35
    statement                      shift and go to state 2
    command                        shift and go to state 3
    somecrement                    shift and go to state 4
    assign                         shift and go to state 5
    forever_block                  shift and go to state 6
    while_block                    shift and go to state 7
    for_block                      shift and go to state 8
    if_block                       shift and go to state 9
    expr                           shift and go to state 10
    empty                          shift and go to state 11

state 14

    (26) while_block -> WHILE . command DO statements DONE
    (5) command -> . somecrement
    (6) command -> . assign
    (7) command -> . forever_block
    (8) command -> . while_block
    (9) command -> . for_block
    (10) command -> . if_block
    (11) command -> . expr
    (12) command -> . empty
    (43) somecrement -> . ID DECREMENT
    (44) somecrement -> . ID INCREMENT
    (45) assign -> . ID ASSIGN expr
    (28) forever_block -> . DO statements FOREVER
    (26) while_block -> . WHILE command DO statements DONE
    (27) for_block -> . FOR ID IN command DO statements DONE
    (15) if_block -> . IF error THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
    (16) if_block -> . IF error THEN NEWLINE statements elifs DONE
    (17) if_block -> . IF error THEN NEWLINE statements ELSE NEWLINE statements DONE
    (18) if_block -> . IF error THEN NEWLINE statements DONE
    (19) if_block -> . IF expr THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
    (20) if_block -> . IF expr THEN NEWLINE statements elifs DONE
    (21) if_block -> . IF expr THEN NEWLINE statements ELSE NEWLINE statements DONE
    (22) if_block -> . IF expr THEN NEWLINE statements DONE
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
  ! shift/reduce conflict for DO resolved as shift
    ID              shift and go to state 12
    DO              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    IF              shift and go to state 16
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)

    command                        shift and go to state 36
    somecrement                    shift and go to state 4
    assign                         shift and go to state 5
    forever_block                  shift and go to state 6
    while_block                    shift and go to state 7
    for_block                      shift and go to state 8
    if_block                       shift and go to state 9
    expr                           shift and go to state 10
    empty                          shift and go to state 11

state 15

    (27) for_block -> FOR . ID IN command DO statements DONE
    ID              shift and go to state 37


state 16

    (15) if_block -> IF . error THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
    (16) if_block -> IF . error THEN NEWLINE statements elifs DONE
    (17) if_block -> IF . error THEN NEWLINE statements ELSE NEWLINE statements DONE
    (18) if_block -> IF . error THEN NEWLINE statements DONE
    (19) if_block -> IF . expr THEN NEWLINE statements elifs ELSE NEWLINE statements DONE
    (20) if_block -> IF . expr THEN NEWLINE statements elifs DONE
    (21) if_block -> IF . expr THEN NEWLINE statements ELSE NEWLINE statements DONE
    (22) if_block -> IF . expr THEN NEWLINE statements DONE
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
    error           shift and go to state 38
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    ID              shift and go to state 41
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)

    expr                           shift and go to state 39
    empty                          shift and go to state 40

state 17

    (29) expr -> STRING .
    MOD             reduce using rule 29 (expr -> STRING .)
    FLOORDIV        reduce using rule 29 (expr -> STRING .)
    TRUEDIV         reduce using rule 29 (expr -> STRING .)
    MUL             reduce using rule 29 (expr -> STRING .)
    SUB             reduce using rule 29 (expr -> STRING .)
    ADD             reduce using rule 29 (expr -> STRING .)
    NEWLINE         reduce using rule 29 (expr -> STRING .)
    DO              reduce using rule 29 (expr -> STRING .)
    THEN            reduce using rule 29 (expr -> STRING .)
    SEMICOLON       reduce using rule 29 (expr -> STRING .)
    STRING          reduce using rule 29 (expr -> STRING .)
    FLOAT           reduce using rule 29 (expr -> STRING .)
    INTEGER         reduce using rule 29 (expr -> STRING .)
    ID              reduce using rule 29 (expr -> STRING .)
    NOT             reduce using rule 29 (expr -> STRING .)
    COLON           reduce using rule 29 (expr -> STRING .)


state 18

    (30) expr -> FLOAT .
    MOD             reduce using rule 30 (expr -> FLOAT .)
    FLOORDIV        reduce using rule 30 (expr -> FLOAT .)
    TRUEDIV         reduce using rule 30 (expr -> FLOAT .)
    MUL             reduce using rule 30 (expr -> FLOAT .)
    SUB             reduce using rule 30 (expr -> FLOAT .)
    ADD             reduce using rule 30 (expr -> FLOAT .)
    NEWLINE         reduce using rule 30 (expr -> FLOAT .)
    DO              reduce using rule 30 (expr -> FLOAT .)
    THEN            reduce using rule 30 (expr -> FLOAT .)
    SEMICOLON       reduce using rule 30 (expr -> FLOAT .)
    STRING          reduce using rule 30 (expr -> FLOAT .)
    FLOAT           reduce using rule 30 (expr -> FLOAT .)
    INTEGER         reduce using rule 30 (expr -> FLOAT .)
    ID              reduce using rule 30 (expr -> FLOAT .)
    NOT             reduce using rule 30 (expr -> FLOAT .)
    COLON           reduce using rule 30 (expr -> FLOAT .)


state 19

    (31) expr -> INTEGER .
    MOD             reduce using rule 31 (expr -> INTEGER .)
    FLOORDIV        reduce using rule 31 (expr -> INTEGER .)
    TRUEDIV         reduce using rule 31 (expr -> INTEGER .)
    MUL             reduce using rule 31 (expr -> INTEGER .)
    SUB             reduce using rule 31 (expr -> INTEGER .)
    ADD             reduce using rule 31 (expr -> INTEGER .)
    NEWLINE         reduce using rule 31 (expr -> INTEGER .)
    DO              reduce using rule 31 (expr -> INTEGER .)
    THEN            reduce using rule 31 (expr -> INTEGER .)
    SEMICOLON       reduce using rule 31 (expr -> INTEGER .)
    STRING          reduce using rule 31 (expr -> INTEGER .)
    FLOAT           reduce using rule 31 (expr -> INTEGER .)
    INTEGER         reduce using rule 31 (expr -> INTEGER .)
    ID              reduce using rule 31 (expr -> INTEGER .)
    NOT             reduce using rule 31 (expr -> INTEGER .)
    COLON           reduce using rule 31 (expr -> INTEGER .)


state 20

    (35) expr -> NOT . expr
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    ID              shift and go to state 41
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)

    expr                           shift and go to state 42
    empty                          shift and go to state 40

state 21

    (36) expr -> SUB . expr
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    ID              shift and go to state 41
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)

    expr                           shift and go to state 43
    empty                          shift and go to state 40

state 22

    (2) statements -> statements statement .
    ID              reduce using rule 2 (statements -> statements statement .)
    DO              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    STRING          reduce using rule 2 (statements -> statements statement .)
    FLOAT           reduce using rule 2 (statements -> statements statement .)
    INTEGER         reduce using rule 2 (statements -> statements statement .)
    NOT             reduce using rule 2 (statements -> statements statement .)
    SUB             reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    NEWLINE         reduce using rule 2 (statements -> statements statement .)
    COLON           reduce using rule 2 (statements -> statements statement .)
    FOREVER         reduce using rule 2 (statements -> statements statement .)
    DONE            reduce using rule 2 (statements -> statements statement .)
    ELSE            reduce using rule 2 (statements -> statements statement .)


state 23

    (3) statement -> command NEWLINE .
    ID              reduce using rule 3 (statement -> command NEWLINE .)
    DO              reduce using rule 3 (statement -> command NEWLINE .)
    WHILE           reduce using rule 3 (statement -> command NEWLINE .)
    FOR             reduce using rule 3 (statement -> command NEWLINE .)
    IF              reduce using rule 3 (statement -> command NEWLINE .)
    STRING          reduce using rule 3 (statement -> command NEWLINE .)
    FLOAT           reduce using rule 3 (statement -> command NEWLINE .)
    INTEGER         reduce using rule 3 (statement -> command NEWLINE .)
    NOT             reduce using rule 3 (statement -> command NEWLINE .)
    SUB             reduce using rule 3 (statement -> command NEWLINE .)
    $end            reduce using rule 3 (statement -> command NEWLINE .)
    NEWLINE         reduce using rule 3 (statement -> command NEWLINE .)
    COLON           reduce using rule 3 (statement -> command NEWLINE .)
    FOREVER         reduce using rule 3 (statement -> command NEWLINE .)
    DONE            reduce using rule 3 (statement -> command NEWLINE .)
    ELSE            reduce using rule 3 (statement -> command NEWLINE .)


state 24

    (37) expr -> expr MOD . expr
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    ID              shift and go to state 41
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)

    expr                           shift and go to state 44
    empty                          shift and go to state 40

state 25

    (38) expr -> expr FLOORDIV . expr
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    ID              shift and go to state 41
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)

    expr                           shift and go to state 45
    empty                          shift and go to state 40

state 26

    (39) expr -> expr TRUEDIV . expr
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    ID              shift and go to state 41
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)

    expr                           shift and go to state 46
    empty                          shift and go to state 40

state 27

    (40) expr -> expr MUL . expr
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    ID              shift and go to state 41
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)

    expr                           shift and go to state 47
    empty                          shift and go to state 40

state 28

    (41) expr -> expr SUB . expr
    (29) expr -> . STRING
    (30) expr -> . FLOAT
    (31) expr -> . INTEGER
    (32) expr -> . empty COLON ID args SEMICOLON
    (33) expr -> . ID COLON ID args SEMICOLON
    (34) expr -> . ID
    (35) expr -> . NOT expr
    (36) expr -> . SUB expr
    (37) expr -> . expr MOD expr
    (38) expr -> . expr FLOORDIV expr
    (39) expr -> . expr TRUEDIV expr
    (40) expr -> . expr MUL expr
    (41) expr -> . expr SUB expr
    (42) expr -> . expr ADD expr
    (4) empty -> .
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19
    ID              shift and go to state 41
    NOT             shift and go to state 20
    SUB             shift and go to state 21
    COLON           reduce using rule 4 (empty -> .)

    expr                           shift and go to state 48
    empty                          shift and go to state 40

state 29
